Build : specify home page to Brussels onload

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         /> -->
         <input id="city" placeholder="Type your city here" type="text" />
         <!-- <label for="city"></label> -->
-        <button id="cityButt">Submit</button>
+        <button id="cityButt">&#8627</button>
       </section>
       <section id="container-results" style="visibility: hidden;">
         <div class="current-results">
