Format : delete non-necessary consts and access them more directly inside functions

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- <label for="city"></label> -->
         <button id="cityButt">&#8594</button>
       </section>
-      <section id="container-results" style="visibility: hidden;">
+      <section id="container-results" style="visibility: visible;">
         <div class="current-results">
           <div id="today-date"></div>
           <div id="name-city"></div>
